--- a/views/layout/userLayout.hbs
+++ b/views/layout/userLayout.hbs
@@ -2,14 +2,14 @@
 <html lang="en">
 
 
-<!-- atherton/index-5.html  22 Nov 2019 09:55:58 GMT -->
+<!-- SneakShots/index-5.html  22 Nov 2019 09:55:58 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>atherton</title>
+    <title>SneakShots</title>
     <meta name="keywords" content="HTML5 Template">
-    <meta name="description" content="atherton - Bootstrap eCommerce Template">
+    <meta name="description" content="SneakShots - Bootstrap eCommerce Template">
     <meta name="author" content="p-themes">
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/icons/apple-touch-icon.png">
@@ -18,8 +18,8 @@
     <link rel="manifest" href="assets/images/icons/site.html">
     <link rel="mask-icon" href="assets/images/icons/safari-pinned-tab.svg" color="#666666">
     <link rel="shortcut icon" href="assets/images/icons/sjicon.ico">
-    <meta name="apple-mobile-web-app-title" content="atherton">
-    <meta name="application-name" content="atherton">
+    <meta name="apple-mobile-web-app-title" content="SneakShots">
+    <meta name="application-name" content="SneakShots">
     <meta name="msapplication-TileColor" content="#cc9966">
     <meta name="msapplication-config" content="assets/images/icons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
@@ -81,5 +81,5 @@
 </body>
 
 
-<!-- atherton/index-5.html  22 Nov 2019 09:56:18 GMT -->
+<!-- SneakShots/index-5.html  22 Nov 2019 09:56:18 GMT -->
 </html>
